SONARPY-1158 Rename ExpressionTrace to ExpressionFlow (#1225)